changes in version 2.5.1 (2013-03-18)
	* added new columns (taxid and center) to proks and euks datasets. Also 
	  replaced non ASCII characters in center names (which cause Warnings).
	* updated plot.genomes and plotby to extend x-axis to current date.
	* replaced 6 ena* functions with a single ena() function to retrieve data 
	  from the REST browser and a separate enaParse() function to parse XML output

changes in version 2.3.3 (2012-09-14)
        * update ncbiTaxonomy function due to changes in eSummary output 
	* added functions to read files in NCBI genomes ftp including GRange 
          objects (gff, ptt, rnt, GeneMarkHMM, Glimmer, Prodigal files) and 
          Biostrings (faa, fna, ffn, frn sequence files).  read.ncbi.ftp is a wrapper. 
        * added ftpList to list directories and files in NCBI and other ftps.  
        * deleted sra table due to recent problems with many SRA taxonomy links

changes in version 2.3.2 (2012-07-01)
        * deleted lproks tables that no longer exists (and removed related pub and 
          complete tables)
	* added abstract to ncbiPubmed

changes in version 2.3.1 (2012-04-03)
        * updated plot genomes to use other date columns like created or submitted
        * removed subset genome functions since these are not really needed
        * fixed second elink in ncbiGenome (other Genome sequences).  This was returning an
          error instead of first elink (assemblies) if no results were found. 
	* added new proks, euks, and virus genome tables from genomes/GENOME_REPORTS ftp.
	* removed old leuks and lenvs genome project tables that are no 
          longer supported (since Aug 2011). The lproks table receives only "complete" 
          genome updates and was kept for now.

changes in version 2.1.5 (2012-03-23)
	* added stop() to esearch and elink if no results found - needed if 
          nesting functions like esummary(esearch())

changes in version 2.1.4 (2012-03-13)