@@ -1,4 +1,6 @@
 changes in version 2.5.1 (2013-03-18)
+	* fixed bug in read.gff to parse locus_tag instead of old_loucs_tag 
+	  if present (see NC_000908.gff from Mycoplasma genitalium G37)
 	* added new columns (taxid and center) to proks and euks datasets. Also 
 	  replaced non ASCII characters in center names (which cause Warnings).
 	* updated plot.genomes and plotby to extend x-axis to current date.
